--- a/src/pages/pool/pool.html
+++ b/src/pages/pool/pool.html
@@ -9,7 +9,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <!-- Display the name of _tournament and the name of _pool -->
+        <!-- Display the name of _tournament and the name of pool -->
         <ion-title>
             {{ _tournament.name }} - {{ _poolData.name }}
         </ion-title>
@@ -21,7 +21,8 @@
     <ion-refresher (ionRefresh)="refresh($event)">
         <ion-refresher-content refreshingText="Chargement"></ion-refresher-content>
     </ion-refresher>
-    <!-- Display the type of _pool et the place of _tournament -->
+
+    <!-- Display the type of _pool et the place of tournament -->
     <ion-grid text-center class="white-background">
         <ion-row style="flex-wrap: wrap;">
             <ion-col width-50>
@@ -36,6 +37,7 @@
             </ion-col>
         </ion-row>
     </ion-grid>
+
     <!-- Display the results for matches -->
     <ion-col width-100><h2>Matchs et <b>Résultats</b></h2></ion-col>
     <ion-card>
@@ -65,7 +67,8 @@
             </ion-list>
         </ion-card-content>
     </ion-card>
-    <!-- Display different text if the _tournament is finished or not -->
+
+    <!-- Display different text if the tournament is finished or not -->
     <ion-col *ngIf="_finish" width-100><h2>Le <b>Classement final</b></h2></ion-col>
     <ion-col *ngIf="!_finish" width-100><h2>Le <b>Classement actuel</b></h2></ion-col>
     <ion-card>
@@ -80,6 +83,7 @@
                         <strong>Equipes</strong>
                     </ion-col>
                 </ion-row>
+
                 <!-- Display the classmate -->
                 <ion-item *ngIf="_finish">
                     <ion-row class="results" (click)="goToTeam(team)"
@@ -92,6 +96,7 @@
                         </ion-col>
                     </ion-row>
                 </ion-item>
+
                 <!-- Display nothing if no matches are finished -->
                 <ion-item *ngIf="!_finish">
                     <ion-row class="results" >
@@ -104,7 +109,8 @@
                     </ion-row>
                 </ion-item>
             </ion-list>
-            <!-- Display the information for _pool-->
+
+            <!-- Display the information for pool-->
             <ion-list *ngIf="_poolData.type == 'Poule' ">
                 <ion-row class="border-table results-head">
                     <ion-col width-10>
@@ -126,7 +132,8 @@
                         <strong>+/-</strong>
                     </ion-col>
                 </ion-row>
-                <!-- Display the classmate for _pool-->
+
+                <!-- Display the classmate for pool-->
                 <ion-row class="results" (click)="goToTeam(team)" *ngFor="let team of _poolData.teams; let i = index;">
                     <ion-col width-10>
                         <strong>{{ i+1 }}</strong>
@@ -150,5 +157,4 @@
             </ion-list>
         </ion-card-content>
     </ion-card>
-
 </ion-content>
