--- a/src/pages/tournament/tournament.html
+++ b/src/pages/tournament/tournament.html
@@ -9,7 +9,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <!-- Display the name of _tournament -->
+        <!-- Display the name of tournament -->
         <ion-title>
             {{ _tournamentData.name }}
         </ion-title>
@@ -21,7 +21,8 @@
     <ion-refresher (ionRefresh)="refresh($event)">
         <ion-refresher-content refreshingText="Chargement"></ion-refresher-content>
     </ion-refresher>
-    <!-- Display the type and the place of _tournament -->
+
+    <!-- Display the type and the place of tournament -->
     <ion-grid text-center class="white-background">
         <ion-row style="flex-wrap: wrap;">
             <ion-col width-50>
@@ -34,6 +35,7 @@
             </ion-col>
         </ion-row>
     </ion-grid>
+
     <ion-col width-100><h2>Liste des <b>Participants</b></h2></ion-col>
     <ion-card>
         <ion-card-content no-padding>
@@ -46,36 +48,44 @@
             </ion-list>
         </ion-card-content>
     </ion-card>
+
     <ion-col width-100><h2>Le <b>Classement</b></h2></ion-col>
     <ion-card>
         <ion-card-content no-padding padding-bottom>
-            <!-- Display "En cours" if there is no winner -->
+            <!-- Display the classmate -->
             <ion-list no-padding>
-                <!-- When we click on the name of the team -> go to detail team -->
                 <ion-item no-padding>
                     <ion-row class="results">
                         <ion-col width-20><strong>1</strong></ion-col>
+                        <!-- When we click on the name of the team -> go to detail team and display the classmate -->
                         <ion-col width-80 class="items" *ngIf="_tournamentData.winner" (click)="goToTeam(_tournamentData.winner)">{{_tournamentData.winner.name}}</ion-col>
+                        <!-- Display "En cours" if there is no winner -->
                         <ion-col width-80 class="items" *ngIf="!_tournamentData.winner">En cours</ion-col>
                     </ion-row>
+
                     <ion-row class="results">
                         <ion-col width-20><strong>2</strong></ion-col>
+                        <!-- When we click on the name of the team -> go to detail team and display the classmate -->
                         <ion-col width-80 class="items" *ngIf="_tournamentData.second" (click)="goToTeam(_tournamentData.second)">{{_tournamentData.second.name}}</ion-col>
+                        <!-- Display "En cours" if there is no winner -->
                         <ion-col width-80 class="items" *ngIf="!_tournamentData.second">En cours</ion-col>
                     </ion-row>
+
                     <ion-row class="results">
                         <ion-col width-20><strong>3</strong></ion-col>
+                        <!-- When we click on the name of the team -> go to detail team and display the classmate -->
                         <ion-col width-80 class="items" *ngIf="_tournamentData.third" (click)="goToTeam(_tournamentData.third)">{{_tournamentData.third.name}}</ion-col>
+                        <!-- Display "En cours" if there is no winner -->
                         <ion-col width-80 class="items" *ngIf="!_tournamentData.third">En cours</ion-col>
                     </ion-row>
                 </ion-item>
             </ion-list>
         </ion-card-content>
     </ion-card>
+
     <ion-col width-100><h2>Liste des <b>Poules</b> / <b>Eliminations</b></h2></ion-col>
     <ion-card>
         <ion-card-content no-padding>
-
             <!-- Add a slider to navigate between pools and eliminations -->
             <ion-slides [options]="{pager:true}">
                 <ion-slide *ngFor="let stage of _tournamentData.stages" class="items">
@@ -86,16 +96,16 @@
                         </ion-col>
                     </ion-row>
 
-                    <hr/>
                     <ion-list>
-                        <!-- When we click on the name of the match -> go to detail _pool -->
+                        <!-- When we click on the name of the match -> go to detail pool -->
                         <ion-item *ngFor="let pool of stage.pools" (click)="goToPool(pool)">
-                            <!-- Display the name of group and display the number of match played on the total of matches to be played -->
                             <ion-row>
+                                <!-- Display the name of group -->
                                 <ion-col width-50 no-padding>
                                     {{ pool.name }}
                                 </ion-col>
 
+                                <!-- Display the number of match played on the total of matches to be played -->
                                 <ion-col width-50 text-right no-padding>
                                     <ion-note>{{pool.playedMatchs}} / {{pool.totalMatchs}}</ion-note>
                                 </ion-col>
