--- a/src/pages/event/event.html
+++ b/src/pages/event/event.html
@@ -91,25 +91,25 @@
                         <ion-row class="results">
                             <ion-col width-20><strong>1</strong></ion-col>
                             <!-- When we click on the name of the team -> go to detail team and display the classmate -->
-                            <ion-col width-80 class="items" *ngIf="_tournamentData.winner" (click)="goToTeam(_tournamentData.winner)">{{_tournamentData.winner.name}}</ion-col>
+                            <ion-col width-80 class="items" *ngIf="tournament.winner" (click)="goToTeam(tournament.winner)">{{tournament.winner.name}}</ion-col>
                             <!-- Display "En cours" if there is no winner -->
-                            <ion-col width-80 class="items" *ngIf="!_tournamentData.winner">En cours</ion-col>
+                            <ion-col width-80 class="items" *ngIf="!tournament.winner">En cours</ion-col>
                         </ion-row>
 
                         <ion-row class="results">
                             <ion-col width-20><strong>2</strong></ion-col>
                             <!-- When we click on the name of the team -> go to detail team and display the classmate -->
-                            <ion-col width-80 class="items" *ngIf="_tournamentData.second" (click)="goToTeam(_tournamentData.second)">{{_tournamentData.second.name}}</ion-col>
+                            <ion-col width-80 class="items" *ngIf="tournament.second" (click)="goToTeam(tournament.second)">{{tournament.second.name}}</ion-col>
                             <!-- Display "En cours" if there is no winner -->
-                            <ion-col width-80 class="items" *ngIf="!_tournamentData.second">En cours</ion-col>
+                            <ion-col width-80 class="items" *ngIf="!tournament.second">En cours</ion-col>
                         </ion-row>
 
                         <ion-row class="results">
                             <ion-col width-20><strong>3</strong></ion-col>
                             <!-- When we click on the name of the team -> go to detail team and display the classmate -->
-                            <ion-col width-80 class="items" *ngIf="_tournamentData.third" (click)="goToTeam(_tournamentData.third)">{{_tournamentData.third.name}}</ion-col>
+                            <ion-col width-80 class="items" *ngIf="tournament.third" (click)="goToTeam(tournament.third)">{{tournament.third.name}}</ion-col>
                             <!-- Display "En cours" if there is no winner -->
-                            <ion-col width-80 class="items" *ngIf="!_tournamentData.third">En cours</ion-col>
+                            <ion-col width-80 class="items" *ngIf="!tournament.third">En cours</ion-col>
                         </ion-row>
                     </ion-item>
                 </ion-grid>
