--- a/src/pages/event/event.html
+++ b/src/pages/event/event.html
@@ -84,32 +84,28 @@
             <div *ngFor="let tournament of _tournaments">
                 <!-- When we click on the name of the _tournament -> go to detail _tournament -->
                 <ion-item-divider class="tournament-name items" (click)="goToTournament(tournament)"><b>{{tournament.name}}</b></ion-item-divider>
-
-                <!-- Display the classmate -->
+                <!-- Display "En cours" if there is no winner -->
+                <!-- When we click on the name of the team -> go to detail team -->
                 <ion-grid class="no-margin-padding">
-                    <ion-item no-padding>
-                        <ion-row class="results">
-                            <ion-col width-20><strong>1</strong></ion-col>
-                            <!-- When we click on the name of the team -> go to detail team and display the classmate -->
-                            <ion-col width-80 class="items" *ngIf="tournament.winner" (click)="goToTeam(tournament.winner)">{{tournament.winner.name}}</ion-col>
-                            <!-- Display "En cours" if there is no winner -->
-                            <ion-col width-80 class="items" *ngIf="!tournament.winner">En cours</ion-col>
+                    <ion-item class="ranking">
+                        <ion-row class="items">
+                            <ion-col class="items" width-25> 1er</ion-col>
+                            <ion-col class="items" width-75 *ngIf="tournament.winner" (click)="goToTeam(tournament.winner)">{{tournament.winner.name}}</ion-col>
+                            <ion-col class="items" width-75 *ngIf="!tournament.winner">En cours</ion-col>
                         </ion-row>
-
-                        <ion-row class="results">
-                            <ion-col width-20><strong>2</strong></ion-col>
-                            <!-- When we click on the name of the team -> go to detail team and display the classmate -->
-                            <ion-col width-80 class="items" *ngIf="tournament.second" (click)="goToTeam(tournament.second)">{{tournament.second.name}}</ion-col>
-                            <!-- Display "En cours" if there is no winner -->
-                            <ion-col width-80 class="items" *ngIf="!tournament.second">En cours</ion-col>
+                    </ion-item>
+                    <ion-item class="ranking">
+                        <ion-row class="items">
+                            <ion-col class="items" width-25> 2ème</ion-col>
+                            <ion-col class="items" width-75 *ngIf="tournament.second" (click)="goToTeam(tournament.second)">{{tournament.second.name}}</ion-col>
+                            <ion-col class="items" width-75 *ngIf="!tournament.second">En cours</ion-col>
                         </ion-row>
-
-                        <ion-row class="results">
-                            <ion-col width-20><strong>3</strong></ion-col>
-                            <!-- When we click on the name of the team -> go to detail team and display the classmate -->
-                            <ion-col width-80 class="items" *ngIf="tournament.third" (click)="goToTeam(tournament.third)">{{tournament.third.name}}</ion-col>
-                            <!-- Display "En cours" if there is no winner -->
-                            <ion-col width-80 class="items" *ngIf="!tournament.third">En cours</ion-col>
+                    </ion-item>
+                    <ion-item class="ranking">
+                        <ion-row class="items">
+                            <ion-col class="items" width-25> 3ème</ion-col>
+                            <ion-col class="items" width-75 *ngIf="tournament.third" (click)="goToTeam(tournament.third)">{{tournament.third.name}}</ion-col>
+                            <ion-col class="items" width-75 *ngIf="!tournament.third">En cours</ion-col>
                         </ion-row>
                     </ion-item>
                 </ion-grid>
