--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -11,7 +11,7 @@
 
     <!-- Filter events -->
     <ion-toolbar no-border-top>
-        <ion-searchbar color="primary" placeholder="Nom de l'évènement.." [(ngModel)]="_searchTerm" (ionInput)="filterEvents()">
+        <ion-searchbar color="primary" placeholder="Nom de l'évènement.." [(ngModel)]="searchTerm" (ionInput)="filterEvents()">
         </ion-searchbar>
     </ion-toolbar>
 </ion-header>
@@ -24,7 +24,7 @@
 
     <ion-list>
         <!-- When we click on the name of the _event -> go to detail _event -->
-        <button ion-item *ngFor="let event of _filteredEvents" (click)="goToEvent(event)">
+        <button ion-item *ngFor="let event of filteredEvents" (click)="goToEvent(event)">
             <div class="items">{{event.name}}</div><!-- Display the name events -->
         </button>
     </ion-list>
