--- a/src/pages/event/event.html
+++ b/src/pages/event/event.html
@@ -85,25 +85,29 @@
                 <!-- When we click on the name of the _tournament -> go to detail _tournament -->
                 <ion-item-divider class="tournament-name items" (click)="goToTournament(tournament)"><b>{{tournament.name}}</b></ion-item-divider>
                 <!-- Display "En cours" if there is no winner -->
-                <!-- When we click on the name of the team -> go to detail team -->
                 <ion-grid class="no-margin-padding">
                     <ion-item class="ranking">
                         <ion-row class="items">
                             <ion-col class="items" width-25> 1er</ion-col>
+                            <!-- When we click on the name of the team -> go to detail team and display the result -->
                             <ion-col class="items" width-75 *ngIf="tournament.winner" (click)="goToTeam(tournament.winner)">{{tournament.winner.name}}</ion-col>
                             <ion-col class="items" width-75 *ngIf="!tournament.winner">En cours</ion-col>
                         </ion-row>
                     </ion-item>
+
                     <ion-item class="ranking">
                         <ion-row class="items">
                             <ion-col class="items" width-25> 2ème</ion-col>
+                            <!-- When we click on the name of the team -> go to detail team and display the result -->
                             <ion-col class="items" width-75 *ngIf="tournament.second" (click)="goToTeam(tournament.second)">{{tournament.second.name}}</ion-col>
                             <ion-col class="items" width-75 *ngIf="!tournament.second">En cours</ion-col>
                         </ion-row>
                     </ion-item>
+
                     <ion-item class="ranking">
                         <ion-row class="items">
                             <ion-col class="items" width-25> 3ème</ion-col>
+                            <!-- When we click on the name of the team -> go to detail team and display the result -->
                             <ion-col class="items" width-75 *ngIf="tournament.third" (click)="goToTeam(tournament.third)">{{tournament.third.name}}</ion-col>
                             <ion-col class="items" width-75 *ngIf="!tournament.third">En cours</ion-col>
                         </ion-row>
